update go mod
